[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
ziggy = { version = "1.3.1", default-features = false }
litep2p = {path = "../..", features = ["websocket"]}
futures = "0.3.31"
tokio-util = { version = "0.7.14", features = ["codec"] }
async-trait = "0.1.88"
bytes = "1.11.1"
