[package]
name = "structure-aware"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "1.0.0"}
tokio = { version = "1.44.2", features = ["full"] }
ziggy = { version = "1.3.1", default-features = false }
litep2p = {path = "../..", features = ["websocket", "fuzz"]}
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"

